syntax = "proto3";
package euc_backend;


import "receipt/receipt.proto";

message ReceiptReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional Receipt payload = 4;
}

message ReceiptListDataReply {
  repeated Receipt receipt_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message ReceiptListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  ReceiptListDataReply payload = 4;
}
